--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
